[gd_scene load_steps=2 format=3 uid="uid://cdml438vwg7qx"]

[ext_resource type="Script" path="res://fin.gd" id="1_wucnn"]

[node name="Fin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wucnn")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 40.0
offset_right = 1282.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 100
text = "Fin del juego"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 712.0
offset_top = 45.5
offset_right = 1203.0
offset_bottom = 150.5
grow_vertical = 2

[node name="MenuPrincial" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Regresar al menu principal"

[node name="VolverJugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Volver a jugar"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 240.0
offset_right = 926.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 40
text = "Puntuaci√≥n obtenida: "

[connection signal="pressed" from="VBoxContainer/MenuPrincial" to="." method="_on_menu_princial_pressed"]
[connection signal="pressed" from="VBoxContainer/VolverJugar" to="." method="_on_volver_jugar_pressed"]
